--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -17,7 +17,30 @@
 					</div>
 				</h1>
 			</div>
+		</section>
+		<section class="map">
+		</section>
+		<section class="numbers">
+			<div class="container">
+				<div class="numbers__item">
+					<div class="numbers__number">235 +</div>
+					<div class="numbers__description">сертифицированных инженеров и разработчиков</div>
+				</div>
+				<div class="numbers__item">
+					<div class="numbers__number">1178+</div>
+					<div class="numbers__description numbers__description_narrow">проектов по модернизации ИТ-инфраструктуры</div>
+				</div>
+				<div class="numbers__item">
+					<div class="numbers__number numbers__number_large">35 лет</div>
+					<div class="numbers__description numbers__description_large">35 лет мы развиваем технологии в России и создаем
+						решения, которыми
+						пользуются миллионы. Одна из крупнейших российских региональных компаний, работающих в сфере системной
+						интеграции
+						<a href="#" class="link link_green-arrow">Подробнее о компании</a>
+					</div>
 
+				</div>
+			</div>
 		</section>
 	</main>
 	@@include('components/business/_footer.html')
