--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -38,7 +38,64 @@
 						интеграции
 						<a href="#" class="link link_green-arrow">Подробнее о компании</a>
 					</div>
-
+				</div>
+			</div>
+		</section>
+		<section class="partners swiper">
+			<div class="partners__first swiper">
+				<div class="swiper-wrapper">
+					<div class="swiper-slide">
+						<img src="@icons/rosneft.svg">
+					</div>
+					<div class="swiper-slide">
+						<img src="@icons/gazprom.svg">
+					</div>
+					<div class="swiper-slide">
+						<img src="@icons/gazpromneft.svg">
+					</div>
+					<div class="swiper-slide">
+						<img src="@icons/novatec.svg">
+					</div>
+					<div class="swiper-slide">
+						<img src="@icons/transneft.svg">
+					</div>
+					<div class="swiper-slide">
+						<img src="@icons/sibur.svg">
+					</div>
+					<div class="swiper-slide">
+						<img src="@icons/tatneft.svg">
+					</div>
+					<div class="swiper-slide">
+						<img src="@icons/alabuga.svg">
+					</div>
+				</div>
+			</div>
+			<div class="partners__second swiper">
+				<div class="swiper-wrapper">
+					<div class="swiper-slide">
+						<img src="@icons/kod.svg">
+					</div>
+					<div class="swiper-slide">
+						<img src="@icons/pantum.svg">
+					</div>
+					<div class="swiper-slide">
+						<img src="@icons/atomic.svg">
+					</div>
+					<div class="swiper-slide">
+						<img src="@icons/stil.svg">
+					</div>
+					<div class="swiper-slide">
+						<img src="@icons/msi.svg">
+					</div>
+					<div class="swiper-slide">
+						<img src="@icons/securityvision.svg">
+					</div>
+					<div class="swiper-slide">
+						<img src="@icons/usergate.svg">
+					</div>
+					<div class="swiper-slide">
+						<img src="@icons/chint.svg">
+					</div>
 				</div>
 			</div>
 		</section>
