--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -18,7 +18,7 @@
 				</h1>
 			</div>
 		</section>
-		<!-- <section class="map">
+		<section class="map">
 		</section>
 		<section class="numbers">
 			<div class="container">
@@ -132,7 +132,7 @@
 						<p>Информационное моделирование здания или информационная модель здания</p>
 						<a class="link link_green-arrow" href="#">подробнее</a>
 					</div>
-					<div class="solution">
+					<div class="solution-card">
 						<img class="solution-card__bg" src="@images/solution-bg.png">
 						<h3>Центры обработки данных</h3>
 						<p>АО «Форт Диалог» успешно выполняет проектирование не только отдельных систем, но комплексных проектов
@@ -141,7 +141,7 @@
 					</div>
 				</div>
 			</div>
-		</section> -->
+		</section>
 		<section class="resources">
 			<div class="container">
 				<h2>Обладаем полным набором <b>компетенций и ресурсов</b>
@@ -193,10 +193,55 @@
 						<a class="link link_green-arrow" href="#">подробнее</a>
 					</div>
 				</div>
-				<div class="swiper-pagination"></div>
+				<div class="swiper-pagination swiper-pagination_white "></div>
 				@@include('components/ui/_button-link.html',
 				{href:'#', class: 'btn_secondary btn_secondary_white',children:'все услуги'})
 			</div>
+		</section>
+		<section class="projects-section">
+			<div class="container">
+				<h2>Проекты</h2>
+			</div>
+			<div class="projects-section__swiper swiper">
+				<div class="swiper-wrapper">
+					<div class="swiper-slide project-card">
+						<div class="project-card__image">
+							<img src="@images/project-1.png">
+						</div>
+						<h3>Полное технологическое оснащение школы нового поколения</h3>
+						<p>Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network (LoRaWAN) на
+							предприятиях</p>
+						<a class="link link_green-arrow" href="#">подробнее</a>
+					</div>
+					<div class="swiper-slide project-card">
+						<div class="project-card__image">
+							<img src="@images/project-2.png">
+						</div>
+						<h3>Полное технологическое оснащение школы нового поколения</h3>
+						<p>Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network (LoRaWAN) на
+							предприятиях Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network
+							(LoRaWAN) на
+							предприятиях</p>
+						<a class="link link_green-arrow" href="#">подробнее</a>
+					</div>
+					<div class="swiper-slide project-card">
+						<div class="project-card__image">
+							<img src="@images/project-1.png">
+						</div>
+						<h3>Полное технологическое</h3>
+						<p>Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network (LoRaWAN) на
+							предприятиях Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network
+							(LoRaWAN) на
+							предприятиях Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network
+							(LoRaWAN) на
+							предприятиях</p>
+						<a class="link link_green-arrow" href="#">подробнее</a>
+					</div>
+				</div>
+				<div class="swiper-pagination"></div>
+			</div>
+			@@include('components/ui/_button-link.html',
+			{href:'#', class: 'btn_secondary',children:'все проекты'})
 		</section>
 
 	</main>
