add tabs controller

--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -18,7 +18,7 @@
 				</h1>
 			</div>
 		</section>
-		<!-- <section class="map">
+		<section class="map">
 		</section>
 		<section class="numbers">
 			<div class="container">
@@ -279,25 +279,25 @@
 					{type: 'submit', class: '',children:'отправить'})
 				</div>
 			</form>
-		</section> -->
+		</section>
 		<section class="media-section">
 			<div class="container">
 				<h2>медиацентр</h2>
-				<div class="media-section__tabs">
-					<div class="media-section__tab link active">
-						Все
-					</div>
-					<div class="media-section__tab link">
-						Новости компании
-					</div>
-					<div class="media-section__tab link">
-						СМИ
-					</div>
-					<div class="media-section__tab link">
-						Мероприятия
-					</div>
-				</div>
-				<div class="media-section__tab-content active">
+				<ul class="media-section__tabs tabs">
+					<li class="media-section__tab link tab active">
+						<a href="#tab-1">Все</a>
+					</li>
+					<li class="media-section__tab link tab">
+						<a href="#tab-2"> Новости компании</a>
+					</li>
+					<li class="media-section__tab link tab">
+						<a href="#tab-3"> СМИ</a>
+					</li>
+					<li class="media-section__tab link tab">
+						<a href="#tab-4"> Мероприятия</a>
+					</li>
+				</ul>
+				<div class="media-section__tab-content tab-content active" id="tab-1">
 					<img src="@images/photographer.png">
 					<div class="media-section__list">
 						<div class="news-card">
@@ -313,6 +313,33 @@
 							<p>Центральный офис компании «Форт Диалог» в городе Уфе посетили ученики 10-х классов МБОУ СОШ 1 села
 								Кушнаренково. Системный интегратор «Форт Диалог» внес свой вклад в подготовку образовательного
 								учреждения к новому учебному году, привлекая к оснащению лучшие ИТ-продукты и решения.</p>
+							<a class="link link_green-arrow" href="#">подробнее</a>
+						</div>
+						<div class="news-card">
+							<div class="news-card__date">1 сентября</div>
+							<h3>Компания «Форт Диалог» 14-й раз стала победителем рейтинга «25 лучших региональных ИТ-компаний»</h3>
+							<p>Системный интегратор «Форт Диалог» внес свой вклад в подготовку образовательного учреждения к новому
+								учебному году, привлекая к оснащению лучшие ИТ-продукты и решения.</p>
+							<a class="link link_green-arrow" href="#">подробнее</a>
+						</div>
+					</div>
+				</div>
+				<div class="media-section__tab-content tab-content" id="tab-2">
+					<img src="@images/building.png">
+					<div class="media-section__list">
+						<div class="news-card">
+							<div class="news-card__date">24 августа</div>
+							<h3>В «Форт Диалоге» прошла первая профориентационная экскурсия</h3>
+							<p>Центральный офис компании «Форт Диалог» в городе Уфе посетили ученики 10-х классов МБОУ СОШ 1 села
+								Кушнаренково. 10-х классов МБОУ СОШ 1 села
+								Кушнаренково. Системный интегратор «Форт Диалог» внес свой вклад в подготовку образовательного
+								учреждения к новому учебному году, привлекая к оснащению лучшие ИТ-продукты и решения.</p>
+							<a class="link link_green-arrow" href="#">подробнее</a>
+						</div>
+						<div class="news-card">
+							<div class="news-card__date">25 августа</div>
+							<h3>К 1 сентября компания «Форт Диалог» оснастила новую школу современным оборудованием</h3>
+							<p>Центральный офис компании «Форт Диалог» в городе Уфе посетили ученики </p>
 							<a class="link link_green-arrow" href="#">подробнее</a>
 						</div>
 						<div class="news-card">
