--- a/src/html/pages/map.html
+++ b/src/html/pages/map.html
@@ -7,10 +7,10 @@
 		<h1 style="margin-bottom: 40px;">Карта сайта</h1>
 		<ol>
 			<li><a href="/" class="link" target="_blank">Главная</a></li>
-
+			<li><a href="/projects" class="link" target="_blank">Проекты</a></li>
 		</ol>
 	</div>
-	
+
 </body>
 
 </html>
