--- a/src/html/pages/projects.html
+++ b/src/html/pages/projects.html
@@ -46,7 +46,43 @@
           </ul>
         </div>
       </div>
-
+    </section>
+    <section class="banner swiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <img src="@images/banner.png" alt="photo">
+          <div class="container">
+            <h2>
+              Полное технологическое оснащение школы нового поколения
+            </h2>
+            <p>Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network (LoRaWAN) на
+              предприятиях</p>
+            @@include('components/ui/_button-link.html',
+            {href:'#', class: 'btn_secondary btn_secondary_white',children:'подробнее'})
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <img src="@images/banner.png" alt="photo">
+          <div class="container">
+            <h2>
+              Полное технологическое оснащение школы нового поколения Полное технологическое оснащение школы нового
+              поколения Полное технологическое оснащение школы нового поколения
+            </h2>
+            <p>Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network (LoRaWAN) на
+              предприятиях Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network
+              (LoRaWAN) на
+              предприятиях Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network
+              (LoRaWAN) на
+              предприятиях Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network
+              (LoRaWAN) на
+              предприятиях</p>
+            @@include('components/ui/_button-link.html',
+            {href:'#', class: 'btn_secondary btn_secondary_white',children:'подробнее'})
+          </div>
+        </div>
+      </div>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
     </section>
   </main>
   @@include('components/business/_footer.html')
