--- a/src/html/pages/projects.html
+++ b/src/html/pages/projects.html
@@ -84,6 +84,46 @@
       <div class="swiper-button-prev"></div>
       <div class="swiper-button-next"></div>
     </section>
+    <section class="projects">
+      <div class="container">
+        <div class="projects__cards">
+          <div class="project-card">
+            <div class="project-card__image">
+              <img src="@images/project-1.png">
+            </div>
+            <h3>Полное технологическое оснащение школы нового поколения</h3>
+            <p>Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network (LoRaWAN) на
+              предприятиях</p>
+            <a class="link link_green-arrow" href="#">подробнее</a>
+          </div>
+          <div class="project-card">
+            <div class="project-card__image">
+              <img src="@images/project-2.png">
+            </div>
+            <h3>Полное технологическое оснащение школы нового поколения</h3>
+            <p>Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network (LoRaWAN) на
+              предприятиях Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network
+              (LoRaWAN) на
+              предприятиях</p>
+            <a class="link link_green-arrow" href="#">подробнее</a>
+          </div>
+          <div class="project-card">
+            <div class="project-card__image">
+              <img src="@images/project-1.png">
+            </div>
+            <h3>Полное технологическое</h3>
+            <p>Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network (LoRaWAN) на
+              предприятиях Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network
+              (LoRaWAN) на
+              предприятиях Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network
+              (LoRaWAN) на
+              предприятиях</p>
+            <a class="link link_green-arrow" href="#">подробнее</a>
+          </div>
+        </div>
+        @@include('components/ui/_pagination.html')
+      </div>
+    </section>
   </main>
   @@include('components/business/_footer.html')
 
