add project-detail page

--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -4,7 +4,7 @@
 
 <body>
 	@@include('components/business/_header.html')
-	<main>
+	<main class="index-page">
 		<section class="title">
 			<div class="container">
 				<h1>
@@ -30,7 +30,7 @@
 					<div class="numbers__number">1178+</div>
 					<div class="numbers__description numbers__description_narrow">проектов по модернизации ИТ-инфраструктуры</div>
 				</div>
-				<div class="numbers__item">
+				<div class="numbers__item numbers__item_large">
 					<div class="numbers__number numbers__number_large">35 лет</div>
 					<div class="numbers__description numbers__description_large">35 лет мы развиваем технологии в России и создаем
 						решения, которыми
