--- a/src/html/pages/projects.html
+++ b/src/html/pages/projects.html
@@ -9,7 +9,7 @@
       <div class="container">
         <ul class="breadcrumbs">
           <li>
-            <a href="#" class="link">Главная</a>
+            <a href="/" class="link">Главная</a>
           </li>
           <li>
             Проекты
