--- a/src/html/pages/map.html
+++ b/src/html/pages/map.html
@@ -8,7 +8,7 @@
 		<ol>
 			<li><a href="/" class="link" target="_blank">Главная</a></li>
 			<li><a href="/projects" class="link" target="_blank">Проекты</a></li>
-
+			<li><a href="/project-detail" class="link" target="_blank">Детальная проекта</a></li>
 			<li><a href="/404" class="link" target="_blank">404</a></li>
 		</ol>
 	</div>
