--- a/src/html/pages/projects.html
+++ b/src/html/pages/projects.html
@@ -89,6 +89,7 @@
         <div class="projects__cards">
           <div class="project-card">
             <div class="project-card__image">
+              <div class="project-card__tag">Образование</div>
               <img src="@images/project-1.png">
             </div>
             <h3>Полное технологическое оснащение школы нового поколения</h3>
@@ -98,6 +99,7 @@
           </div>
           <div class="project-card">
             <div class="project-card__image">
+              <div class="project-card__tag">Медицина</div>
               <img src="@images/project-2.png">
             </div>
             <h3>Полное технологическое оснащение школы нового поколения</h3>
@@ -109,6 +111,43 @@
           </div>
           <div class="project-card">
             <div class="project-card__image">
+              <div class="project-card__tag">Промышленность</div>
+              <img src="@images/project-1.png">
+            </div>
+            <h3>Полное технологическое</h3>
+            <p>Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network (LoRaWAN) на
+              предприятиях Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network
+              (LoRaWAN) на
+              предприятиях Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network
+              (LoRaWAN) на
+              предприятиях</p>
+            <a class="link link_green-arrow" href="#">подробнее</a>
+          </div>
+          <div class="project-card">
+            <div class="project-card__image">
+              <div class="project-card__tag">Образование</div>
+              <img src="@images/project-1.png">
+            </div>
+            <h3>Полное технологическое оснащение школы нового поколения</h3>
+            <p>Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network (LoRaWAN) на
+              предприятиях</p>
+            <a class="link link_green-arrow" href="#">подробнее</a>
+          </div>
+          <div class="project-card">
+            <div class="project-card__image">
+              <div class="project-card__tag">Медицина</div>
+              <img src="@images/project-2.png">
+            </div>
+            <h3>Полное технологическое оснащение школы нового поколения</h3>
+            <p>Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network (LoRaWAN) на
+              предприятиях Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network
+              (LoRaWAN) на
+              предприятиях</p>
+            <a class="link link_green-arrow" href="#">подробнее</a>
+          </div>
+          <div class="project-card">
+            <div class="project-card__image">
+              <div class="project-card__tag">Промышленность</div>
               <img src="@images/project-1.png">
             </div>
             <h3>Полное технологическое</h3>
