add service=detail page

--- a/src/html/pages/project-detail.html
+++ b/src/html/pages/project-detail.html
@@ -73,24 +73,25 @@
               видеонаблюдения с функциями аналитики, возможностью записи звука и идентификации личности.</p>
           </div>
         </div>
-      </div>
-      <div class="task__swiper swiper">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <img src="@images/univercity.png">
+        <div class="task__swiper swiper-component swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="@images/univercity.png">
+            </div>
+            <div class="swiper-slide">
+              <img src="@images/hall.png">
+            </div>
+            <div class="swiper-slide">
+              <img src="@images/univercity.png">
+            </div>
+            <div class="swiper-slide">
+              <img src="@images/hall.png">
+            </div>
           </div>
-          <div class="swiper-slide">
-            <img src="@images/hall.png">
-          </div>
-          <div class="swiper-slide">
-            <img src="@images/univercity.png">
-          </div>
-          <div class="swiper-slide">
-            <img src="@images/hall.png">
-          </div>
+          <div class="swiper-pagination"></div>
         </div>
-        <div class="swiper-pagination"></div>
       </div>
+
     </section>
     <section class="projects-section">
       <div class="container">
