add solutions page

--- a/src/html/pages/projects.html
+++ b/src/html/pages/projects.html
@@ -84,9 +84,9 @@
       <div class="swiper-button-prev"></div>
       <div class="swiper-button-next"></div>
     </section>
-    <section class="projects">
+    <section class="projects-detail">
       <div class="container">
-        <div class="projects__cards">
+        <div class="projects-detail__cards">
           <div class="project-card">
             <div class="project-card__image">
               <div class="project-card__tag">Образование</div>
