--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -113,13 +113,13 @@
 				</div>
 				<div class="solutions-section__list">
 					<div class="solution-card">
-						<img class="solution-card__bg" src="@images/solution-bg.png">
+						<img class="solution-card__image" src="@images/solution-bg.png">
 						<h3>Интеллектуальная транспортная система «Курсор»</h3>
 						<p>Создать системы безопасности для котельных</p>
 						<a class="link link_green-arrow" href="#">подробнее</a>
 					</div>
 					<div class="solution-card">
-						<img class="solution-card__bg" src="@images/solution-bg.png">
+						<img class="solution-card__image" src="@images/solution-bg.png">
 						<h3>Системы информационной безопасности</h3>
 						<p>Компания Форт Диалог предлагает комплексные решения по защите автоматизированных систем предприятия.
 							Каждое из таких решений представляет собой набор взаимодополняющих друг друга продуктов, обеспечивающих
@@ -127,13 +127,13 @@
 						<a class="link link_green-arrow" href="#">подробнее</a>
 					</div>
 					<div class="solution-card">
-						<img class="solution-card__bg" src="@images/solution-bg.png">
+						<img class="solution-card__image" src="@images/solution-bg.png">
 						<h3>АСУ ТП</h3>
 						<p>Информационное моделирование здания или информационная модель здания</p>
 						<a class="link link_green-arrow" href="#">подробнее</a>
 					</div>
 					<div class="solution-card">
-						<img class="solution-card__bg" src="@images/solution-bg.png">
+						<img class="solution-card__image" src="@images/solution-bg.png">
 						<h3>Центры обработки данных</h3>
 						<p>АО «Форт Диалог» успешно выполняет проектирование не только отдельных систем, но комплексных проектов
 							любой сложности</p>
